<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Orders.OrderActivity">
    <ListView
        android:id="@+id/listViewOrders"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:scrollbars="vertical"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        app:layout_constraintTop_toBottomOf="@id/listViewOrders"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/contacts_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/listViewOrders"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/contact_form_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/contact_us"
                android:textColor="@color/purple_light"
                android:textSize="40sp"
                android:fontFamily="sans-serif-light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_name"
                    android:textColor="@color/purple_light"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:maxLength="20"
                    android:background="@color/white"
                    android:hint="@string/contact_name"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textColor="@color/purple_light"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:maxLength="20"
                    android:background="@color/white"
                    android:hint="+359 000 000 000"
                    android:inputType="phone"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/purple_light"
                    android:textSize="13sp" />

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:maxLength="20"
                    android:background="@color/white"
                    android:hint="@string/email"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg"
                    android:textColor="@color/purple_light"
                    android:textSize="13sp" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:gravity="top"
                    android:hint="@string/msg"
                    android:background="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:fitsSystemWindows="true"
                    android:breakStrategy="balanced"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:padding="5dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"

                    android:background="@color/grey" />

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/purple_light"
                android:elevation="4dp"
                android:paddingLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:paddingRight="70dp"
                android:text="@string/order"
                android:textColor="#fff" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>