<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

<!--    <ImageView-->
<!--        android:id="@+id/image"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="300dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        android:background="@drawable/ic_launcher_foreground">-->

<!--    </ImageView>-->

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorTest"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="34sp">

    </ImageView>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/home_text"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <GridLayout
        android:id="@+id/GridLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="4"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        app:layout_constraintBottom_toTopOf="@id/viewPager"
        tools:context=".GridXMLActivity">

        <RelativeLayout
            android:id="@+id/menuButton"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:background="@drawable/shadow"
            android:clickable="true">

            <ImageView
                android:id="@+id/menu"
                android:background="@drawable/ic_baseline_restaurant_menu_24"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:text="@string/food_menu"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ordersButton"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:background="@drawable/shadow">

            <ImageView
                android:id="@+id/orders"
                android:background="@drawable/ic_baseline_shopping_cart_24"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:text="@string/orders"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/restaurantsButton"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:background="@drawable/shadow">

            <ImageView
                android:id="@+id/restaurants"
                android:background="@drawable/ic_baseline_restaurant_24"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:text="@string/restaurants"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/contactsButton"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            android:background="@drawable/shadow">

            <ImageView
                android:id="@+id/contacts"
                android:background="@drawable/ic_baseline_perm_contact_calendar_24"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_horizontal"
                android:text="@string/contact_us"
                android:textColor="@color/grey"
                android:textSize="20sp" />
        </RelativeLayout>
    </GridLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="360dp"
        android:layout_height="210dp"
        android:layout_below="@+id/GridLayout1"
        android:layout_centerHorizontal="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GridLayout1" />

    <LinearLayout
        android:id="@+id/SliderDots"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPager"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>